--- a/Api Rest People/src/main/resources/application.properties
+++ b/Api Rest People/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port:8040
-spring.datasource.url=jdbc:mysql://localhost/db_rest_service?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost/db_rest_service?useSSL=true
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -7,3 +7,5 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
 logging.level.org.hibernate.SQL=debug
 logging.level.org.springframework.web=DEBUG
+
+spring.jpa.properties.hibernate.format_sql=true
